Split tablet tool tip event data in two frames

Xwayland processes tablet tool tip events immediately instead of waiting
for the frame event. It can result in the corresponding down events
having the wrong position or pressure.

See also https://gitlab.freedesktop.org/xorg/xserver/-/merge_requests/2032.

BUG: 479856

Co-authored-by: Petra Mogyorósi <petra_m_@outlook.com>